...
        android:id="@+id/login_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/username_li"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:layout_marginTop="166dp"
            android:layout_marginBottom="239dp"
            android:ems="10"
            android:hint="Username"
...
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.168" />

        <EditText
            android:id="@+id/password_li"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:layout_marginBottom="80dp"
            android:ems="10"
            android:hint="Password"
            android:importantForAutofill="no"
...
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_li"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFEB3B"
            android:text="@string/login"
            android:textColor="#706F6F"
            android:textSize="18sp"
...
