...
        android:gravity="center"
        android:text="SlowDrive"
        android:textAlignment="viewStart"
        android:textSize="45sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/warn"
        app:layout_constraintEnd_toStartOf="@+id/btn_settings"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <ImageView
...
