...
                    android:paddingLeft="20dp"
                    android:text="Request in background"
                    android:textSize="18sp"
                    android:thumbTint="#FFC107" />

                <Button
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFEB3B"
                    android:text="Logout"
...
