<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.UI.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textinput_constraint"
            android:layout_width="344dp"
            android:layout_height="324dp"
            app:layout_constraintBottom_toTopOf="@+id/button_constraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topPanel"
            app:layout_constraintVertical_bias="0.925">

            <EditText
                android:id="@+id/repassword_su"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="Re-enter Password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_su"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/lastname_su"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="319dp"
                android:ems="10"
                android:hint="Last Name (optional)"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstname_su"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/username_su"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="239dp"
                android:ems="10"
                android:hint="Username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastname_su"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/emailaddress_su"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="160dp"
                android:ems="10"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_su"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/password_su"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="80dp"
                android:ems="10"
                android:hint="Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailaddress_su"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/firstname_su"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="399dp"
                android:ems="10"
                android:hint="First Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_constraint"
            android:layout_width="168dp"
            android:layout_height="76dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.558">

            <Button
                android:id="@+id/signup_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFEB3B"
                android:text="@string/sign_up"
                android:textColor="#595555"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topPanel"
            android:layout_width="519dp"
            android:layout_height="81dp"
            android:layout_marginTop="49dp"
            app:layout_constraintBottom_toTopOf="@+id/button_constraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:id="@+id/back_submit"
                android:layout_width="75dp"
                android:layout_height="65dp"
                android:backgroundTint="#FFEB3B"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.036"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="174dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="viewStart"
                android:textColor="#7A7A7A"
                android:textSize="36sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toEndOf="@+id/back_submit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="227dp"
                android:layout_height="51dp"
                android:fontFamily="@font/hind_light"
                android:gravity="center"
                android:text="Create an Account"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.733" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/message_constraint"
            android:layout_width="299dp"
            android:layout_height="361dp"
            android:layout_marginTop="599dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/message_su"
                android:layout_width="256dp"
                android:layout_height="304dp"

                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>